Archive2/39/f80117004b7ef3/output
tail: cannot open `sample_*.log' for reading: No such file or directory
main.cpp:25:5: error: expected expression
    );
    ^
1 error generated.
